web/manifests/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: web
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: "web.${var.hostname}"
#     http:
#       paths:
#       - backend:
#           service:
#             name: web
#             port:
#               number: 80
#         path: /
#         pathType: Prefix

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
